# Automake-Autoconf-Template-Project

./: .gitignore  LICENSE.md  Makefile.am  README.md  configure.ac
my_inc/: Makefile.am  myadd.cpp  myadd.h
src/: Makefile.am  helper.cc  helper.h  main.cpp
